--- a/src/Compoenents/Home/Home.css
+++ b/src/Compoenents/Home/Home.css
@@ -127,19 +127,17 @@ width: 60%;
 }
 @media only screen and (max-width: 768px) {
   .home-div{
-    width: 100%;
+    margin-right: 10%;
+    width: 80%;
     position:absolute;
     margin-left: 10%;
   }
   .right-side{
     margin: auto; 
-    /* margin-left: 15%; */
     margin-top: 79px;
   }
   .right-side h1{
-    /* text-align: center; */
-    font-size: 45px;
-    /* margin-right: auto; */
+    font-size: 40px;
     color: rgb(219, 224, 229);
   
   }
@@ -161,6 +159,7 @@ width: 60%;
       display: flex;
      /* justify-content: center;  */
       margin-top: 5%;
+      margin-bottom: 1%;
       list-style: none;
       display: flex;
     }
