--- a/src/Compoenents/Project/Project.css
+++ b/src/Compoenents/Project/Project.css
@@ -9,104 +9,134 @@
 
 }
 .project-container h1{
-    margin-right: 15%;
-    margin-left: 15%;
     text-align: center;
-}
-.project-details{
-    /* margin-top: 10px; */
+ }
+ .project-details {
+    border-radius: 10px;
+    /* padding: 20px; */
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .project-details h2 {
+    color: aqua;
+    font-size: 21px;
+    margin-bottom: 10px;
+  }
+  
+  .details {
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
+  
+  .project-skills {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .project-skills li {
+    display: inline-block;
+    background-color:#268f8f;
+    color: #fff;
+    font-size: 12px;
+    padding: 2px 5px;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .giticon {
     display: flex;
-    transition: transform 0.3s ease;
+    align-items: center;
+  }
+  
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    margin-right: 15px;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .tooltip i {
+    color: white;
+    font-size: 24px;
+    transition: color 0.3s;
+  }
+  
+  .tooltip:hover i {
+    color: aqua;
+  }
+  
+/*.project-details{
     margin-bottom: 30px; 
 }
-.project-details:hover{
-    transform: scale(1.1); 
-    transform-origin: center center; 
-    /* background-color:#ffffff ;    */
-
-}
-.column{
-    flex: 1;
-}
-.project-details img{
-    transition: transform 0.3s ease; 
-    position: absolute;
-    height: 200px;
-    width: 300px;
-    z-index: 0;
-    opacity: 50%;
-    cursor: pointer;
-}
-/* .project-details img:hover{
-    transform: scale(1.1); 
-    transform-origin: center center; 
-    filter: hue-rotate(180deg); 
-
-
-} */
 
 .project-details h2{
     color: white;
-
     font-size: 19px;
-    float: right;
+    float: left;
 }
 
 .details {
-    position: relative;
-    float: right;
-    width: 450px;
-    color: white;
-    background-color: #008080;
-    /* background-color: rgb(2, 58, 99);    */
-    padding: 10px;
-    font-size: 12px;
-
-}
-.skills {
-    list-style: none;
-    display: flex; 
-    position: relative;
-    float: right;
-    cursor:auto;
+    float: left;
+    color: rgb(192, 210, 226);
     background-color: transparent;
+    margin-top: 0;
+    font-size: 15px;
+    font-weight: 300;   
 
 }
-.skills li {
-    /* border: 2px solid black; */
-    /* border-radius: 20%; */
-    /* background-color: #548181; */
-    /* padding: 2px; */
-    margin-left: 16px;
+.project-skills {
+    display:flex;
+    float: left;
+    list-style: none;
+    background-color: transparent;
+    font-size: 20px;
+    margin-top: 10px;
+
+}
+.project-skills li {
+    margin-right: 16px;
     font-size: 10px;
     color: #04e4e4;
     background-color: transparent;
 }
 .giticon{
-    position: relative;
-    float: right;
+    float: left;
     cursor:pointer;
     background-color: transparent;
     font-size: 20px;
-    margin-top: 10px;
-    margin-left: 12%;
 }
 .giticon i{
     font-size: 19px;
-    float: right;
-    margin-left: 15px;
+    margin-right: 15px;
     color: aliceblue;
-}
-.giticon i:hover{
-    font-size: 19px;
-    float: right;
-    margin-left: 15px;
-    color:#04e4e4;
 }
 
 .tooltip {
-    position: relative;
-    display: inline-block;
+    display: inline;
 }
 
 .tooltip .tooltiptext {
@@ -129,33 +159,20 @@
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
-}
+} */
 
 @media only screen and (max-width: 768px) {
-.project-container h1{
+  .project-container h1{
     display: none;
-}
-.project-container  h4{
-    color: white;
-}
-.project-container{
+ } 
+
+ .project-container{
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 10%;
-    /* margin-top: 20%; */
+    margin-top: 5%;
+    margin-bottom: 90px;
     line-height: 1.5;
     font-family: Inter, sans-serif;
     font-feature-settings: 'liga' 1, 'calt' 1;
-    /* height: 400px; */
 
-}
-.project-details img{
-    transition: transform 0.3s ease; 
-    position: absolute;
-    height: 190px;
-    width: 250px;
-    z-index: 0;
-    opacity: 50%;
-    cursor: pointer;
-}
-}
+}}
