--- a/src/Compoenents/About/About.css
+++ b/src/Compoenents/About/About.css
@@ -9,7 +9,6 @@
     line-height: 1.5;
     margin-left: 15%;
     margin-right: 15%;
-    /* height: 450px; */
     font-size: 16px;
     font-weight: 300;
 }
@@ -24,8 +23,9 @@ h4{
 }
 @media only screen and (max-width: 768px) {
 .about-container{
+    /* margin-top: 0%; */
     float: right;
-    /* padding-top: 70px; */
+    padding-top: 0px;
     line-height: 1.5;
     margin-left: 10%;
     margin-right: 10%;
