--- a/src/Compoenents/Home/Home.css
+++ b/src/Compoenents/Home/Home.css
@@ -127,10 +127,11 @@ width: 60%;
 }
 @media only screen and (max-width: 768px) {
   .home-div{
-    margin-right: 10%;
-    width: 80%;
-    position:absolute;
+    width: 90%;
+    position:relative;
     margin-left: 10%;
+    margin-left: 10%;
+
   }
   .right-side{
     margin: auto; 
@@ -138,6 +139,7 @@ width: 60%;
   }
   .right-side h1{
     font-size: 40px;
+    /* margin-right: auto; */
     color: rgb(219, 224, 229);
   
   }
@@ -159,7 +161,6 @@ width: 60%;
       display: flex;
      /* justify-content: center;  */
       margin-top: 5%;
-      margin-bottom: 1%;
       list-style: none;
       display: flex;
     }
@@ -169,13 +170,15 @@ width: 60%;
     
     }
     .about-div{
-      margin-top: 40%;
+      margin-top: 12%;
       width: 100%;
     }
     .expreience-div{
+      margin-top: 13%;
     width: 100%;
     }
     .project-div{
+      margin-top: 13%;
     width: 100%;
     
     }
