--- a/src/Compoenents/About/About.css
+++ b/src/Compoenents/About/About.css
@@ -14,7 +14,7 @@
 }
 span{
     color: aliceblue;
-    font-weight: bold;
+    font-weight: 600px;
     font-size: 14px;
 
 }
@@ -23,19 +23,24 @@ h4{
 }
 @media only screen and (max-width: 768px) {
 .about-container{
-    /* margin-top: 0%; */
     float: right;
     padding-top: 0px;
     line-height: 1.5;
-    margin-left: 10%;
-    margin-right: 10%;
-    /* height: 450px; */
-    font-size: 16px;
-    font-weight: 300;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 17px;
+    font-weight: 450;
+    color: rgb(128, 142, 157);
+
 
 }
+.about-container span{
+    font-size: 17px;
+    font-family: 500px;
+}
 h4{
-    display:block;
+        display:block;
     color: aliceblue;
+    z-index: 1000;
 }
 }
