--- a/src/Compoenents/Experience/Experience.css
+++ b/src/Compoenents/Experience/Experience.css
@@ -13,8 +13,8 @@
 text-align: center;
 }
 i{
-  color: aqua;
-  font-size: 10px;
+  color:rgb(94 234 212);
+  font-size: 14px;
 }
 .company-list {
   display: flex;
@@ -27,7 +27,7 @@ i{
   padding: 8px;
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 300;
 }
 
@@ -44,7 +44,7 @@ i{
 }
 
 .selected {
-  color: aqua;
+  color:rgb(94 234 212);
   background-color: #35415a;
 }
 
@@ -53,7 +53,8 @@ i{
     text-decoration-skip-ink: auto;
     transition: var(--transition);
   transition: 0.5s step-start; 
-  background-color: aqua;
+  background-color:rgb(94 234 212);
+
 }
 
 .experience-container {
@@ -83,7 +84,7 @@ font-weight: 300;
 }
 .company{
   margin-left: 2px;
-  color: aqua;
+  color:rgb(94 234 212);
   font-size: 16px;
   font-weight: light;
 }
@@ -99,9 +100,10 @@ font-weight: 300;
 }
 
 .description {
+  color: rgb(128, 142, 157);
   margin-bottom: 10px;
   font-size: 16px;
-font-weight: 300;
+font-weight: 400;
 }
 
 .skills span {
@@ -111,7 +113,7 @@ font-weight: 300;
   border-radius: 3px;
 }
 .resume:hover{
-  color: aqua;
+  color:rgb(94 234 212);
 }
 .resume{
   cursor: pointer;
@@ -140,13 +142,12 @@ font-weight: 300;
 @media only screen and (max-width: 768px) {
   .div-exp{
     margin-bottom: 0%;
-    margin-right: 10%;
-    margin-left: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
     line-height: 1.5;
     margin-top: 0;
     font-family: Inter, sans-serif;
     font-feature-settings: 'liga' 1, 'calt' 1;
-    /* display: inline-block; */
     height: 400px;
   }
   .div-exp .h1-class{
@@ -157,14 +158,18 @@ display: none;
 }
 
 .company-item {
-  
-  margin-right: 10px;
+  display: flex;
+   justify-content: center;
+    align-items: center;  
+    margin-right: 10px;
   display: inline-block;
   position: relative;
   cursor: pointer;
   padding: 8px;
-  font-size: 14px;
-  font-weight: 300;
+  font-size: 15px;
+  font-weight: 450;
+  border: 1px solid #2d384f; /* Border around the box */
+ margin-bottom: 30px;
 }
 
 .company-item:hover {
@@ -181,12 +186,13 @@ display: none;
 }
 
 .selected {
-  color: aqua;
+  color:rgb(94 234 212);
   background-color: #35415a;
 }
 
 .selected .vertical-line {
-  background-color: aqua;
+  background-color:rgb(94 234 212);
+
 }
 
 .experience-container {
@@ -204,7 +210,7 @@ display: none;
 }
 
 .date {
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 300;
 }
 
@@ -214,7 +220,7 @@ display: none;
 
 .company {
   margin-left: 2px;
-  color: aqua;
+  color:rgb(94 234 212);
   font-size: 16px;
   font-weight: light;
 }
@@ -231,15 +237,16 @@ display: none;
 }
 
 .description {
+  color: rgb(128, 142, 157);
   margin-bottom: 10px;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .resume {
   cursor: pointer;
-  font-size: 14px;
-  text-decoration: none;
+  font-size: 15px;
+  text-decoration: underline;
 }
 
 .resume a {
