--- a/src/Compoenents/Project/Project.css
+++ b/src/Compoenents/Project/Project.css
@@ -13,20 +13,19 @@
  }
  .project-details {
     border-radius: 10px;
-    /* padding: 20px; */
-    margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 60px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
   }
   
   .project-details h2 {
-    color: aqua;
-    font-size: 21px;
-    margin-bottom: 10px;
+    color:rgb(94 234 212);
+    font-size: 18px;
+    /* margin-bottom: 6px; */
   }
   
   .details {
-    font-size: 14px;
-    margin-bottom: 15px;
+    font-size: 15px;
+    margin-bottom: 10px;
   }
   
   .project-skills {
@@ -37,8 +36,8 @@
   
   .project-skills li {
     display: inline-block;
-    background-color:#268f8f;
-    color: #fff;
+    background-color:rgba(45,212,191,.1);
+    color:rgb(94 234 212);
     font-size: 12px;
     padding: 2px 5px;
     border-radius: 5px;
@@ -61,7 +60,7 @@
     visibility: hidden;
     width: 120px;
     background-color: #333;
-    color: #fff;
+    color:rgb(94 234 212);
     text-align: center;
     border-radius: 6px;
     padding: 5px;
@@ -85,9 +84,6 @@
     transition: color 0.3s;
   }
   
-  .tooltip:hover i {
-    color: aqua;
-  }
   
 /*.project-details{
     margin-bottom: 30px; 
@@ -165,14 +161,38 @@
   .project-container h1{
     display: none;
  } 
+  
+ .details {
+  font-size: 15px;
+  font-weight: 400px;
+  margin-bottom: 15px;
 
+}
+.project-skills {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.project-skills li {
+  display: inline-block;
+  background-color:rgba(45,212,191,.1);
+  color:rgb(94 234 212);
+  font-size: 14px;
+  padding: 2px 5px;
+  border-radius: 50px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
  .project-container{
-    margin-right: 10%;
-    margin-left: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
     margin-top: 0%;
     margin-bottom: 90px;
     line-height: 1.5;
     font-family: Inter, sans-serif;
     font-feature-settings: 'liga' 1, 'calt' 1;
 
-}}
+}
+
+}
