--- a/src/Compoenents/Home/Home.css
+++ b/src/Compoenents/Home/Home.css
@@ -12,7 +12,7 @@
 .right-side{
   margin-right: auto; 
   margin-left: 15%;
-  margin-top: 79px;
+  margin-top: 80px;
 }
 .right-side h1{
   font-size: 45px;
@@ -20,7 +20,7 @@
 
 }
 .right-side h2{
-  font-size: 18px;
+  font-size: 20px;
   margin-top: -15px;
   color: rgb(187, 192, 198);
 }
@@ -42,7 +42,7 @@
 }
 .list-items {
   /* margin-left: -39px; */
-  margin-top: 80px;
+  margin-top: 60px;
   list-style: none;
   text-decoration: none;
   font-size: small;
@@ -55,32 +55,19 @@
   margin-bottom: 1px;
   color: rgb(128, 142, 157);
   width: 37px;
-  margin-top: 2%;
+  /* margin-top: 2%; */
   float: left;
 }
-/* .nameofthe:hover
-{
-  .link-item{
-  transition: width 0.99s, margin-right 0.99s, color 0.99s; 
-  width: 80px;
-  margin-right: 30px;
-}
-} */
 
-/* .nameofthe:hover{
-  .link-item{
-    transition: width 0.99s, margin-right 0.99s, color 0.99s; 
-    width: 80px;
-    margin-right: 30px;
-    background-color: rgb(128, 142, 157);
-  }
-} */
 .link-item:hover{
   margin: 10px transparent;
   transition: width 0.99s, margin-right 0.99s, color 0.99s; 
   width: 80px;
   margin-right: 30px;
   background-color: rgb(128, 142, 157);
+}
+.link-item li::checked{
+  color: aqua;
 }
 
 .list-items li {
@@ -108,6 +95,8 @@ li.active hr.link-item {
 .expreience-div{
 float: right;
 width: 60%;
+margin-top: 12%;
+
 }
 .project-div{
 float: right;
@@ -115,17 +104,15 @@ width: 60%;
 
 }
 .more-div{
-  float: inline-end;
+  float:right;
   width: 100%;
 }
 .ONCLICK{
   margin-right : 20px;
-  font-size: 30px;
+  font-size: 35px;
 }
-.ONCLICK:hover{
-  color: #111c34;
-}
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
+  
   .home-div{
     width: 90%;
     position:relative;
@@ -136,30 +123,38 @@ width: 60%;
     margin-top: 50px;
   }
   .right-side h1{
-    font-size: 33px;
+    font-size: 40px;
+    /* font-weight: 600; */
     color: rgb(219, 224, 229);
   
   }
   .right-side h2{
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 600;
     color: rgb(198, 206, 214);
   }
   .right-side p{
     font-weight: 450;
-    font-size: 17px;
-     margin-top: 5px;
-    color: rgb(128, 142, 157);
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 7px;
+    color: rgb(201, 206, 211);
   }
   .list-items{
     display: none;
   }
     .social-icons ul{
       display: flex;
-      margin-top: 6%;
+      margin-top: 5%;
       list-style: none;
       display: flex;
+
     }
-    
+  .ONCLICK
+{  font-size: 35px;
+  margin-right: auto;
+  color: rgb(142, 154, 167);
+}    
     .social-icons li{
       color: rgb(128, 142, 157);
     
@@ -169,12 +164,78 @@ width: 60%;
       width: 100%;
     }
     .expreience-div{
-      margin-top: 12%;
+      margin-top: 13%;
     width: 100%;
     }
     .project-div{
+      margin-top: 13%;
+    width: 100%;
+    }
+    .more-div{
+      margin-bottom: 3%;
+    }
+}
+@media only screen and (max-width: 640px) {
+  .home-div{
+    width: 100%;
+    position:relative;
+    margin-left: 4%;
+  }
+  .right-side{
+    margin: auto; 
+    margin-top: 40px;
+  }
+  .right-side h1{
+    font-size: 32px;
+    color: rgb(219, 224, 229);
+  }
+  .right-side h2{
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(198, 206, 214);
+  }
+  .right-side p{
+    font-weight: 450;
+    font-size: 15px;
+    font-weight: 400;
+     margin-top: 7px;
+    color: rgb(142, 154, 167);
+  }
+  .list-items{
+    display: none;
+  }
+    .social-icons ul{
+      display: flex;
+      margin-top: 5%;
+      list-style: none;
+      display: flex;
+
+    }
+  .ONCLICK
+{  font-size: 25px;
+  margin-right: auto;
+  color: rgb(142, 154, 167);
+}    
+    .social-icons li{
+      color: rgb(128, 142, 157);
+    
+    }
+    .about-div{
       margin-top: 12%;
+      width: 100%;
+    }
+    .expreience-div{
+      margin-top: 13%;
+    width: 100%;
+    }
+    .project-div{
+      margin-top: 13%;
     width: 100%;
     
     }
+
+    .more-div{
+      margin-bottom: 3%;
+    }
   }
+ 
